--- a/AndreiWeb/Views/Category/Index.cshtml
+++ b/AndreiWeb/Views/Category/Index.cshtml
@@ -1,4 +1,4 @@
-﻿
+﻿@model List<Category>
 
 <!DOCTYPE html>
 
@@ -9,6 +9,33 @@
 <body>
 <div>
     <h1>Category List</h1>
+    <table class="table table-bordered table-striped">
+        <thead>
+        <tr>
+            <th>
+                Category Name
+            </th>
+            <th>
+                Display Order
+            </th>
+        </tr>
+        </thead>
+        <tbody>
+        @foreach (var obj in Model.OrderBy(o=> o.DisplayOrder))
+        {
+            <tr>
+                <td>
+                    @obj.Name
+                </td>
+
+                <td>
+                    @obj.DisplayOrder
+                </td>
+            </tr>
+        }
+        </tbody>
+    </table>
+    
 </div>
 </body>
 </html>
