--- a/AndreiWeb/Views/Category/Index.cshtml
+++ b/AndreiWeb/Views/Category/Index.cshtml
@@ -7,8 +7,17 @@
     <title></title>
 </head>
 <body>
-<div>
-    <h1>Category List</h1>
+<div class="container">
+    <div class="row pt-4 pb-3">
+        <div class="col-6">
+            <h2 class="text-primary"> Category List</h2>
+        </div>
+        <div class="col-6 text-end">
+            <a asp-controller="Category" asp-action="Create" class="btn btn-primary">
+                <i class="bi bi-plus-square-fill"></i>  Create New Category
+            </a>
+        </div>
+    </div>
     <table class="table table-bordered table-striped">
         <thead>
         <tr>
@@ -18,10 +27,11 @@
             <th>
                 Display Order
             </th>
+            <th></th>
         </tr>
         </thead>
         <tbody>
-        @foreach (var obj in Model.OrderBy(o=> o.DisplayOrder))
+        @foreach (var obj in Model.OrderBy(o => o.DisplayOrder))
         {
             <tr>
                 <td>
@@ -31,11 +41,21 @@
                 <td>
                     @obj.DisplayOrder
                 </td>
+                <td>
+                    <div class="w-75 btn-group" role="group">
+                        <a asp-controller="Category" asp-action="Edit" asp-route-Id="@obj.Id" class="btn btn-primary mx-2">
+                            <i class="bi bi-pencil-square"></i> Modify
+                        </a>
+                        <a asp-controller="Category" asp-action="Delete" class="btn btn-danger mx-2">
+                            <i class="bi bi-trash-fill"></i> Delete
+                        </a>
+                    </div>
+                </td>
             </tr>
         }
         </tbody>
     </table>
-    
+
 </div>
 </body>
 </html>
