Category CRUD Completed

--- a/AndreiWeb/Views/Shared/_Layout.cshtml
+++ b/AndreiWeb/Views/Shared/_Layout.cshtml
@@ -41,8 +41,8 @@
     </main>
 </div>
 
-<footer class=" row border-top footer bg-primary text-light text-center">
-    <div class="container col-6" >
+<footer class="row border-top footer m-0 bg-primary text-light text-center">
+    <div class="container col-6">
         &copy; 2025 - AndreiWeb - <a class="text-info" asp-controller="Home" asp-action="Privacy">Privacy</a>
     </div>
     <div class="container col-6">
