--- a/AndreiWeb/Views/Category/Index.cshtml
+++ b/AndreiWeb/Views/Category/Index.cshtml
@@ -1,12 +1,9 @@
 ﻿@model List<Category>
 
-<!DOCTYPE html>
-
-<html>
-<head>
-    <title></title>
-</head>
-<body>
+@if (TempData["success"] != null)
+{
+    <h2>@TempData["success"]</h2>
+}
 <div class="container">
     <div class="row pt-4 pb-3">
         <div class="col-6">
@@ -43,10 +40,10 @@
                 </td>
                 <td>
                     <div class="w-75 btn-group" role="group">
-                        <a asp-controller="Category" asp-action="Edit" asp-route-Id="@obj.Id" class="btn btn-primary mx-2">
+                        <a asp-controller="Category" asp-action="Edit" asp-route-id="@obj.Id" class="btn btn-primary mx-2">
                             <i class="bi bi-pencil-square"></i> Modify
                         </a>
-                        <a asp-controller="Category" asp-action="Delete" class="btn btn-danger mx-2">
+                        <a asp-controller="Category" asp-action="Delete" asp-route-id="@obj.Id" class="btn btn-danger mx-2">
                             <i class="bi bi-trash-fill"></i> Delete
                         </a>
                     </div>
@@ -57,5 +54,3 @@
     </table>
 
 </div>
-</body>
-</html>
