--- a/AndreiWeb/Areas/Admin/Views/Product/Index.cshtml
+++ b/AndreiWeb/Areas/Admin/Views/Product/Index.cshtml
@@ -1,2 +1,64 @@
 ﻿@model List<Product>
 
+<div class="card shadow border-0 mt-4">
+    <div class="card-header bg-secondary bg-gradient ml-0 py-3">
+        <div class="row">
+            <div class="col-12 text-center">
+                <h2 class="text-white py-2">Product List</h2>
+            </div>
+        </div>
+    </div>
+    <div class="card-body p-4">
+        <div class="row  pb-3">
+            <div class="col-6"></div>
+            <div class="col-6 text-end">
+                <a asp-controller="Product" asp-action="Create" class="btn btn-primary">
+                    <i class="bi bi-plus-square-fill"></i>  Create New Product
+                </a>
+            </div>
+        </div>
+        <table class="table table-bordered table-striped">
+            <thead>
+            <tr>
+                <th>
+                    Product Name
+                </th>
+                <th>
+                    Seller
+                </th>
+                <th>
+                    List Price
+                </th>
+                <th></th>
+            </tr>
+            </thead>
+            <tbody>
+            @foreach (var obj in Model.OrderBy(o => o.Title))
+            {
+                <tr>
+                    <td>
+                        @obj.Title
+                    </td>
+
+                    <td>
+                        @obj.Seller
+                    </td>
+                    <td>
+                        @obj.ListPrice
+                    </td>
+                    <td>
+                        <div class="w-75 btn-group" role="group">
+                            <a asp-controller="Category" asp-action="Edit" asp-route-id="@obj.Id" class="btn btn-primary mx-2">
+                                <i class="bi bi-pencil-square"></i> Modify
+                            </a>
+                            <a asp-controller="Category" asp-action="Delete" asp-route-id="@obj.Id" class="btn btn-danger mx-2">
+                                <i class="bi bi-trash-fill"></i> Delete
+                            </a>
+                        </div>
+                    </td>
+                </tr>
+            }
+            </tbody>
+        </table>
+    </div>
+</div>
