Edit view Product

--- a/AndreiWeb/Views/Shared/_Layout.cshtml
+++ b/AndreiWeb/Views/Shared/_Layout.cshtml
@@ -54,13 +54,13 @@
     </nav>
 </header>
 <div class="container">
-    <main role="main" class="pb-3">
+    <main role="main" class="mb-5 pb-4">
         <partial name="_Notification"/>
         @RenderBody()
     </main>
 </div>
 
-<footer class="row border-top footer m-0 bg-primary text-light text-center">
+<footer class="row border-top footer m-0 mt-4 bg-primary text-light text-center">
     <div class="container col-6">
         &copy; 2025 - AndreiWeb - <a class="text-info" asp-controller="Home" asp-action="Privacy">Privacy</a>
     </div>
