--- a/AndreiWeb/Areas/Admin/Views/Product/Delete.cshtml
+++ b/AndreiWeb/Areas/Admin/Views/Product/Delete.cshtml
@@ -24,7 +24,7 @@
                     <label asp-for="Seller" disabled class="ms-2"></label>
                 </div>
                 <div class="form-floating py-2 col-12">
-                    <input asp-for="Description" class="form-control border-0 shadow"/>
+                    <textarea asp-for="Description" class="form-control border-0 shadow"></textarea>
                     <label asp-for="Description" disabled class="ms-2"></label>
                 </div>
                 <div class="form-floating py-2 col-12">
