--- a/AndreiWeb/Areas/Admin/Views/Product/Index.cshtml
+++ b/AndreiWeb/Areas/Admin/Views/Product/Index.cshtml
@@ -13,27 +13,23 @@
             <div class="col-6"></div>
             <div class="col-6 text-end">
                 <a asp-controller="Product" asp-action="Create" class="btn btn-primary">
-                    <i class="bi bi-plus-square-fill"></i>  Create New Product
+                    <i class="bi bi-plus-square-fill"></i> Create New Product
                 </a>
             </div>
         </div>
         <table class="table table-bordered table-striped">
             <thead>
             <tr>
-                <th>
-                    Product Name
-                </th>
-                <th>
-                    Seller
-                </th>
-                <th>
-                    List Price
-                </th>
+                <th>Product Name</th>
+                <th>Seller</th>
+                <th>List Price</th>
+                <th>Key</th>
+                <th>Category</th>
                 <th></th>
             </tr>
             </thead>
             <tbody>
-            @foreach (var obj in Model.OrderBy(o => o.Title))
+            @foreach (var obj in Model)
             {
                 <tr>
                     <td>
@@ -47,11 +43,19 @@
                         @obj.ListPrice
                     </td>
                     <td>
+                        @obj.Key
+                    </td>
+                    <td>
+                        TBA
+                    </td>
+                    <td>
                         <div class="w-75 btn-group" role="group">
-                            <a asp-controller="Product" asp-action="Edit" asp-route-id="@obj.Id" class="btn btn-primary mx-2">
+                            <a asp-controller="Product" asp-action="Edit" asp-route-id="@obj.Id"
+                               class="btn btn-primary mx-2">
                                 <i class="bi bi-pencil-square"></i> Modify
                             </a>
-                            <a asp-controller="Product" asp-action="Delete" asp-route-id="@obj.Id" class="btn btn-danger mx-2">
+                            <a asp-controller="Product" asp-action="Delete" asp-route-id="@obj.Id"
+                               class="btn btn-danger mx-2">
                                 <i class="bi bi-trash-fill"></i> Delete
                             </a>
                         </div>
