--- a/AndreiWeb/Areas/Admin/Views/Product/Create.cshtml
+++ b/AndreiWeb/Areas/Admin/Views/Product/Create.cshtml
@@ -1,4 +1,4 @@
-﻿
+
 @model Product
 
 <div class="card shadow border-0 mt-4">
@@ -52,6 +52,13 @@
                     <input asp-for="ListPrice" class="form-control border-0 shadow"/>
                     <label asp-for="ListPrice" class="ms-2"></label>
                     <span asp-validation-for="ListPrice" class="text-danger"></span>
+                </div>
+                <div class="form-floating py-2 col-12">
+                    <select asp-for="CategoryId"  asp-items="ViewBag.CategoryList"class="form-select border-0 shadow">
+                        <option disabled selected>--Select Category--</option>
+                    </select>
+                    <label asp-for="CategoryId" class="ms-2"></label>
+                    <span asp-validation-for="CategoryId" class="text-danger"></span>
                 </div>
                 <hr/>
                 <div class="row mt-3">
