--- a/AndreiWeb/Areas/Customer/Views/_ViewImports.cshtml
+++ b/AndreiWeb/Areas/Customer/Views/_ViewImports.cshtml
@@ -1,3 +1,5 @@
 ﻿@using AndreiWeb
 @using AndreiWeb.Models
+@using AndreiWeb.Models.ViewModels
+
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
