--- a/AndreiWeb/Views/_ViewImports.cshtml
+++ b/AndreiWeb/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using AndreiWeb
 @using AndreiWeb.Models
+@using AndreiWeb.Models.ViewModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
