Added Rich text editor for product description

--- a/AndreiWeb/Views/Shared/_Layout.cshtml
+++ b/AndreiWeb/Views/Shared/_Layout.cshtml
@@ -71,6 +71,8 @@
 <script src="~/lib/jquery/dist/jquery.min.js"></script>
 <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
 <script src="~/js/site.js" asp-append-version="true"></script>
+<script src="https://cdn.tiny.cloud/1/0ll1ng6upc5kaa61lvxe8qhzdyzwlow1korycvq1u0hnem6d/tinymce/8/tinymce.min.js" referrerpolicy="origin" crossorigin="anonymous"></script>
+
 @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
