--- a/AndreiWeb/Areas/Admin/Views/Product/Index.cshtml
+++ b/AndreiWeb/Areas/Admin/Views/Product/Index.cshtml
@@ -12,7 +12,7 @@
         <div class="row  pb-3">
             <div class="col-6"></div>
             <div class="col-6 text-end">
-                <a asp-controller="Product" asp-action="Create" class="btn btn-primary">
+                <a asp-controller="Product" asp-action="Upsert" class="btn btn-primary">
                     <i class="bi bi-plus-square-fill"></i> Create New Product
                 </a>
             </div>
@@ -50,7 +50,7 @@
                     </td>
                     <td>
                         <div class="w-75 btn-group" role="group">
-                            <a asp-controller="Product" asp-action="Edit" asp-route-id="@obj.Id"
+                            <a asp-controller="Product" asp-action="Upsert" asp-route-id="@obj.Id"
                                class="btn btn-primary mx-2">
                                 <i class="bi bi-pencil-square"></i> Modify
                             </a>
