--- a/AndreiWeb/Areas/Admin/Views/Product/Upsert.cshtml
+++ b/AndreiWeb/Areas/Admin/Views/Product/Upsert.cshtml
@@ -5,12 +5,13 @@
     <div class="card-header bg-secondary bg-gradient ml-0 py-3">
         <div class="row">
             <div class="col-12 text-center">
-                <h2 class="text-white py-2">Create Product</h2>
+                <h2 class="text-white py-2">@(Model.Product.Id!=0 ? "Update":"Create") Product</h2>
             </div>
         </div>
     </div>
     <div class="card-body p-4">
-        <form method="post" class="row">
+        <form method="post" class="row" enctype="multipart/form-data">
+            <input asp-for="Product.Id" hidden/>
             <div class="border-black p-3 ">
                 @* <div asp-validation-summary="ModelOnly"></div> *@
                 <div class="form-floating py-2 col-12">
@@ -23,10 +24,10 @@
                     <label asp-for="Product.Seller" class="ms-2"></label>
                     <span asp-validation-for="Product.Seller" class="text-danger"></span>
                 </div>
-                <div class="form-floating py-2 col-12">
+                <div class=" py-2 col-12">
+                    <label asp-for="Product.Description" class="ms-2 text-muted"></label>
                     <textarea asp-for="Product.Description" class="form-control border-0 shadow"></textarea>
-                    <label asp-for="Product.Description" class="ms-2"></label>
-                    <span asp-validation-for="Product.Description" class="text-danger"></span>
+
                 </div>
                 <div class="form-floating py-2 col-12">
                     <input asp-for="Product.Key" class="form-control border-0 shadow"/>
@@ -34,9 +35,8 @@
                     <span asp-validation-for="Product.Key" class="text-danger"></span>
                 </div>
                 <div class="form-floating py-2 col-12">
-                    <input asp-for="Product.ImageUrl" class="form-control border-0 shadow"/>
+                    <input type="file" class="form-control border-0 shadow"/>
                     <label asp-for="Product.ImageUrl" class="ms-2"></label>
-                    <span asp-validation-for="Product.ImageUrl" class="text-danger"></span>
                 </div>
                 <div class="form-floating py-2 col-12">
                     <input asp-for="Product.Price" class="form-control border-0 shadow"/>
@@ -59,7 +59,7 @@
                     <span asp-validation-for="Product.ListPrice" class="text-danger"></span>
                 </div>
                 <div class="form-floating py-2 col-12">
-                    <select asp-for="Product.CategoryId"  asp-items="@Model.CategoryList" class="form-select border-0 shadow">
+                    <select asp-for="Product.CategoryId" asp-items="@Model.CategoryList" class="form-select border-0 shadow">
                         <option disabled selected>--Select Category--</option>
                     </select>
                     <label asp-for="Product.CategoryId" class="ms-2"></label>
@@ -67,9 +67,18 @@
                 </div>
                 <hr/>
                 <div class="row mt-3">
-                    <div class="col-6 col-md-3">
-                        <button type="submit" class="btn btn-primary form-control">Create</button>
-                    </div>
+                    @if (Model.Product.Id!=0)
+                    {
+                        <div class="col-6 col-md-3">
+                            <button type="submit" class="btn btn-primary form-control">Update</button>
+                        </div>
+                    }
+                    else
+                    {
+                        <div class="col-6 col-md-3">
+                            <button type="submit" class="btn btn-primary form-control">Create</button>
+                        </div>
+                    }
                     <div class="col-6 col-md-3">
                         <a asp-controller="Product" asp-action="Index" class="btn btn-outline-primary form-control">
                             Back to list
@@ -85,5 +94,26 @@
 @section Scripts{
     @{
         <partial name="_ValidationScriptsPartial"/>
+        <script>
+  tinymce.init({
+    selector: 'textarea',
+    plugins: [
+      // Core editing features
+      'anchor', 'autolink', 'charmap', 'codesample', 'emoticons', 'link', 'lists', 'media', 'searchreplace', 'table', 'visualblocks', 'wordcount',
+      // Your account includes a free trial of TinyMCE premium features
+      // Try the most popular premium features until Nov 11, 2025:
+      'checklist', 'mediaembed', 'casechange', 'formatpainter', 'pageembed', 'a11ychecker', 'tinymcespellchecker', 'permanentpen', 'powerpaste', 'advtable', 'advcode', 'advtemplate', 'ai', 'uploadcare', 'mentions', 'tinycomments', 'tableofcontents', 'footnotes', 'mergetags', 'autocorrect', 'typography', 'inlinecss', 'markdown','importword', 'exportword', 'exportpdf'
+    ],
+    toolbar: 'undo redo | blocks fontfamily fontsize | bold italic underline strikethrough | link media table mergetags | addcomment showcomments | spellcheckdialog a11ycheck typography uploadcare | align lineheight | checklist numlist bullist indent outdent | emoticons charmap | removeformat',
+    tinycomments_mode: 'embedded',
+    tinycomments_author: 'Author name',
+    mergetags_list: [
+      { value: 'First.Name', title: 'First Name' },
+      { value: 'Email', title: 'Email' },
+    ],
+    ai_request: (request, respondWith) => respondWith.string(() => Promise.reject('See docs to implement AI Assistant')),
+    uploadcare_public_key: 'fdc6c2e3401766c570d2',
+  });
+</script>
     }
 }
