--- a/AndreiWeb/Areas/Admin/Views/Product/Index.cshtml
+++ b/AndreiWeb/Areas/Admin/Views/Product/Index.cshtml
@@ -17,52 +17,23 @@
                 </a>
             </div>
         </div>
-        <table class="table table-bordered table-striped">
+        <table  id="tblData" class="table table-bordered table-striped " style="width: 100%">
             <thead>
             <tr>
                 <th>Product Name</th>
+                <th>Key</th>
                 <th>Seller</th>
                 <th>List Price</th>
-                <th>Key</th>
                 <th>Category</th>
                 <th></th>
             </tr>
             </thead>
-            <tbody>
-            @foreach (var obj in Model)
-            {
-                <tr>
-                    <td>
-                        @obj.Title
-                    </td>
 
-                    <td>
-                        @obj.Seller
-                    </td>
-                    <td>
-                        @obj.ListPrice
-                    </td>
-                    <td>
-                        @obj.Key
-                    </td>
-                    <td>
-                        @obj.Category.Name
-                    </td>
-                    <td>
-                        <div class="w-75 btn-group" role="group">
-                            <a asp-controller="Product" asp-action="Upsert" asp-route-id="@obj.Id"
-                               class="btn btn-primary mx-2">
-                                <i class="bi bi-pencil-square"></i> Modify
-                            </a>
-                            <a asp-controller="Product" asp-action="Delete" asp-route-id="@obj.Id"
-                               class="btn btn-danger mx-2">
-                                <i class="bi bi-trash-fill"></i> Delete
-                            </a>
-                        </div>
-                    </td>
-                </tr>
-            }
-            </tbody>
         </table>
     </div>
 </div>
+
+@section Scripts
+{
+    <script src="~/js/product.js"></script>
+}
