--- a/AndreiWeb/Areas/Identity/Pages/_ViewImports.cshtml
+++ b/AndreiWeb/Areas/Identity/Pages/_ViewImports.cshtml
@@ -1,4 +1,7 @@
 @using Microsoft.AspNetCore.Identity
 @using AndreiWeb.Areas.Identity
 @using AndreiWeb.Areas.Identity.Pages
+@using AndreiWeb.Utility
+@using AndreiWeb.Models
+@using AndreiWeb.Models.ViewModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
