--- a/AndreiWeb/Views/Shared/_Layout.cshtml
+++ b/AndreiWeb/Views/Shared/_Layout.cshtml
@@ -31,24 +31,26 @@
                     <li class="nav-item">
                         <a class="nav-link " asp-area="Customer"  asp-controller="Home" asp-action="Privacy">Privacy</a>
                     </li>
+                    @if (User.IsInRole(SD.Role_Admin))
+                    {
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                <i class="bi bi-database-fill-gear"></i> Admin panel
+                            </a>
+                            <ul class="dropdown-menu">
+                                <li><a class=dropdown-item>Admin Options</a></li>
 
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                            <i class="bi bi-list"></i>
-                        </a>
-                        <ul class="dropdown-menu">
-                            <li><a class=dropdown-item>Admin Panel</a></li>
-                            
-                            <li><hr class="dropdown-divider"></li>
+                                <li><hr class="dropdown-divider"></li>
 
-                            <li class="nav-item">
-                                <a class="dropdown-item" asp-area="Admin" asp-controller="Category" asp-action="Index">Category</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="dropdown-item" asp-area="Admin" asp-controller="Product" asp-action="Index">Product</a>
-                            </li>
-                        </ul>
-                    </li>
+                                <li class="nav-item">
+                                    <a class="dropdown-item" asp-area="Admin" asp-controller="Category" asp-action="Index">Category</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="dropdown-item" asp-area="Admin" asp-controller="Product" asp-action="Index">Product</a>
+                                </li>
+                            </ul>
+                        </li>
+                    }
                 </ul>
                 <partial name="_LoginPartial"/>
             </div>
