--- a/AndreiWeb/Views/Shared/_Layout.cshtml
+++ b/AndreiWeb/Views/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>@ViewData["Title"] - AndreiWeb</title>
+    <title>@ViewData["Title"] - TechCart</title>
     <script type="importmap"></script>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css"/>
     <link rel="stylesheet" href="~/AndreiWeb.styles.css" asp-append-version="true"/>
@@ -18,7 +18,7 @@
 <header>
     <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark bg-primary border-bottom box-shadow mb-3">
         <div class="container-fluid">
-            <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">AndreiWeb</a>
+            <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">TechCart</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -69,10 +69,10 @@
 
 <footer class="row border-top footer m-0 mt-4 bg-primary text-light text-center">
     <div class="container col-6">
-        &copy; 2025 - AndreiWeb - <a class="text-info" asp-controller="Home" asp-action="Privacy">Privacy</a>
+        &copy; 2025 - Andrei_Web_Software - <a class="text-info" asp-controller="Home" asp-action="Privacy">Privacy</a>
     </div>
     <div class="container col-6">
-        <i class="bi bi-heart-fill"></i> Learning new stuff
+        <i class="bi bi-headset"></i> +40722222222
     </div>
 </footer>
 <script src="~/lib/jquery/dist/jquery.min.js"></script>
