--- a/AndreiWeb/Views/Shared/_Layout.cshtml
+++ b/AndreiWeb/Views/Shared/_Layout.cshtml
@@ -54,6 +54,10 @@
                             </ul>
                         </li>
                     }
+                    <li class="nav-item">
+                        <a class="nav-link" asp-area="Customer" asp-controller="ShoppingCart" asp-action="Index">Cart
+                            <i class="bi bi-cart-fill"></i> &nbsp;(0)</a>
+                    </li>
                 </ul>
                 <partial name="_LoginPartial"/>
             </div>
